Create icon and begin functionality

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="js/angular.js"></script>
     <script type="text/javascript" src="js/angular-resource.js"></script>
     <script type="text/javascript" src="js/angular-route.js"></script>
+    <script type="text/javascript" src="js/imagesloaded.pkgd.js"></script>
+    <script type="text/javascript" src="js/isotope.pkgd.js"></script>
     <script type="text/javascript" src="js/drinKit.js"></script>
 </head>
 <body class="max" ng-controller="appController">
